--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -73,6 +73,7 @@
     <nav>
       <ul>
         <li><a href="{% url 'prod_list' %}">Produtos</a></li>
+        <li><a href="{% url 'add_products' %}">Cadastrar Produtos</a></li>
       </ul>
     </nav>
   </header>
